--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "build": "npx babel src --out-dir dist"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alaminet/review-star"
+  },
   "keywords": [
     "review",
     "star"
